--- a/development/sass/components/_card.scss
+++ b/development/sass/components/_card.scss
@@ -1,30 +1,31 @@
 .card {
-    padding: 40px 20px;
     position: relative;
+
     &:before {
         content: '';
         background-image: url('../../static/images/Vector2.svg');
         position: absolute;
-        height: 716.69px;
-        width: 574.11px;
+        height: 869px;
+        width: 396px;
         background-repeat: no-repeat;
-        background-size: 574px 716px;
+        background-size: 100%;
         background-position: right;
-        right: 0;
-        top: -70px;
+        right: -62px;
+        top: -140px;
         z-index: 1;
     }
+
     &::after {
         content: '';
         background-image: url('../../static/images/Vector5.svg');
         position: absolute;
-        height: 482.79px;
-        width: 609.88px;
+        height: 765px;
+        width: 510px;
         background-repeat: no-repeat;
-        background-size: 482px 609px;
-        background-position: left;
+        background-size: 100%;
+        background-position: center;
         left: 0;
-        bottom: 0;
+        bottom: -215px;
         z-index: 1;
     }
 
@@ -34,40 +35,42 @@
         padding: 54px 68px 86px;
         display: flex;
         justify-content: space-between;
-        max-width: 1110px;
+        max-width: 1120px;
         height: auto;
         box-shadow: (6px 6px 40px rgba(14, 93, 137, 0.22));
         margin: 0 auto;
         position: relative;
         background-color: #ffffff;
         border-radius: 40px;
-      
+
         h3 {
-            font-family: Rubik;
+            font-family: $rubik;
             font-style: normal;
             font-weight: bold;
             font-size: 36px;
             line-height: 60px;
-            color: #212429;
+            color: $black;
             margin-bottom: 42px;
         }
+
         strong {
             display: block;
-            font-family: Rubik;
+            font-family: $rubik;
             font-style: normal;
             font-weight: bold;
             font-size: 26px;
             line-height: 40px;
-            color: #212429;
+            color: $black;
             margin-bottom: 42px;
         }
+
         p {
-            font-family: Rubik;
+            font-family: $rubik;
             font-style: normal;
             font-weight: normal;
             font-size: 26px;
             line-height: 1.8;
-            color: #495057;
+            color: $grey;
         }
     }
 }
