--- a/development/sass/components/_circles.scss
+++ b/development/sass/components/_circles.scss
@@ -1,39 +1,43 @@
 .circles {
-    padding-top: 40px;
+    padding-top: 77px;
     padding-bottom: 40px;
+    position: relative;
 
     &::after {
         content: '';
         background-image: url('../../static/images/Vector8.svg');
         position: absolute;
-        height: 660px;
-        width: 582px;
+        height: 812px;
+        width: 387px;
         background-repeat: no-repeat;
-        background-size: 660px 582px;
+        background-size: 100%;
         background-position: left;
-        left: -135px;
-        bottom: -60px;
+        left: 0px;
+        bottom: -145px;
         z-index: 1;
     }
+
     &-wrapper {
         display: grid;
         justify-content: center;
         align-items: center;
-        grid-gap: 60px;
+        grid-gap: 30px 60px;
         grid-template-columns: 520px 520px;
         max-width: 1100px;
         width: 100%;
         margin: 0 auto;
+        position: relative;
+        z-index: 2;
     }
 
     &-title {
-        font-family: Rubik;
+        font-family: $rubik;
         font-style: normal;
         font-weight: bold;
         font-size: 70px;
         line-height: 83px;
         text-align: center;
-        color: #212429;
+        color: $black;
         margin-bottom: 55px;
 
     }
@@ -54,22 +58,28 @@
     * {
         z-index: 3;
     }
+
     &-logos {
         display: flex;
         align-items: flex-start;
         justify-content: center;
+
         figure {
             margin: 0 5px;
+
             &:nth-of-type(2) {
                 margin-top: 37px;
             }
+
             height: 77px;
         }
+
         img {
             width: auto;
             height: 77px;
         }
     }
+
     &::after {
         content: '';
         backdrop-filter: blur(20px);
@@ -94,13 +104,14 @@
         align-items: center;
         justify-content: center;
         color: #ffffff;
-        font-family: Spartan;
+        font-family: $spartan;
         font-style: normal;
         font-weight: bold;
         font-size: 26px;
         line-height: 40px;
         padding-bottom: 5px;
         padding-left: 5px;
+
         &--orange {
             background-image: url('../../static/images/label-orange.svg');
             right: -55px;
@@ -118,24 +129,24 @@
     }
 
     strong {
-        font-family: Rubik;
+        font-family: $rubik;
         font-style: normal;
         font-weight: bold;
         font-size: 30px;
         line-height: 40px;
         text-align: center;
-        color: #212429;
+        color: $black;
         margin-top: 25px;
     }
 
     p {
         margin-top: 25px;
-        font-family: Rubik;
+        font-family: $rubik;
         font-style: normal;
         font-weight: normal;
         font-size: 24px;
         line-height: 36px;
         text-align: center;
-        color: #495057;
+        color: $grey;
     }
 }
