--- a/development/sass/components/_header.scss
+++ b/development/sass/components/_header.scss
@@ -1,10 +1,12 @@
 .header {
     display: flex;
-    padding: 30px 60px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
     justify-content: flex-end;
+    position: fixed;
+    transform: translate(-50%, 0);
+    left: 50%;
+    top: 0;
+    max-width: 1920px;
+    width: 100%;
+    padding: 30px 60px;
     z-index: 15;
 }
