--- a/development/sass/components/_hero.scss
+++ b/development/sass/components/_hero.scss
@@ -1,22 +1,24 @@
 .hero {
     width: 100%;
-    height: 1004px;
+    height: 915px;
     background-image: url('../../static/images/first-screen.png');
-    background-size: 1920px 1004px;
+    background-size: 1920px 886px;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: top;
     display: flex;
     align-items: flex-end;
+
     &-wrapper {
         display: flex;
         justify-content: space-between;
         align-items: flex-end;
         width: 100%;
     }
+
     &-title {
-        margin-bottom: 146px;
-        margin-right: 248px;
-       
+        margin-bottom: 230px;
+        margin-right: 165px;
+
         &__paragraph {
             font-family: Assistant;
             font-style: normal;
@@ -29,28 +31,109 @@
             text-align: right;
         }
     }
+
     &-blocks {
         width: 771px;
         height: 707px;
-       position: relative;
+        position: relative;
     }
+
     &-block {
         &__top {
             position: absolute;
-            top: -60px;
-            right: -60px;
+            top: 10px;
+    right: -110px;
+            background-image: url('../../static/images/block-top.svg');
+            background-repeat: no-repeat;
+            background-position: center;
+            width: 436px;
+            height: 421px;
+            border-radius: 50%;
+            &:hover {
+                background-image: url('../../static/images/block-top-hover.svg');
+                strong{
+                    display: block;
+                }
+            }
         }
+
+
         &__left {
             position: absolute;
-            bottom: 50%;
-            left: -60px;
+            bottom: 45%;
+            left: 40px;
             transform: translate(0, 50%);
+            background-image: url('../../static/images/block-left.svg');
+            background-repeat: no-repeat;
+            background-position: center;
+            width: 523px;
+            height: 503px;
+            border-radius: 50%;
+
+            &:hover {
+                background-image: url('../../static/images/block-left-hover.svg');
+                strong{
+                    display: block;
+                }
+            }
         }
 
         &__bottom {
             position: absolute;
             bottom: -60px;
-            right: -60px;
+            right: -110px;
+            background-image: url('../../static/images/block-bottom.svg');
+            background-repeat: no-repeat;
+            background-position: center;
+            width: 448px;
+            height: 428px;
+            border-radius: 50%;
+
+            &:hover {
+                background-image: url('../../static/images/block-bottom-hover.svg');
+                strong{
+                    display: block;
+                }
+            }
+        }
+        &__text {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            padding-bottom: 30px;
+            text-align: center;
+
+            strong {
+                display: block;
+                margin-bottom: 20px;
+                font-family: $rubik;
+                font-style: normal;
+                font-weight: bold;
+                font-size: 32px;
+                line-height: 38px;
+                display: flex;
+                align-items: center;
+                text-align: center;
+                color: #FFFFFF;
+                display: none;
+            }
+            svg {
+                margin-bottom: 15px;
+
+            }
+            p {
+                font-family: $rubik;
+                font-style: normal;
+                font-weight: normal;
+                font-size: 32px;
+                line-height: 38px;
+                display: flex;
+                align-items: center;
+                text-align: center;
+                color: #FFFFFF;
+                
+            }
         }
     }
 }
