--- a/development/sass/components/_partners.scss
+++ b/development/sass/components/_partners.scss
@@ -3,6 +3,15 @@
     padding-bottom: 80px;
     position: relative;
 
+    @include break (tablet) {
+        padding-bottom: 80px;
+    }
+
+    @include break (phone) {
+        padding-top: 0;
+        padding-bottom: 40px;
+    }
+
     &:before {
         content: '';
         background-image: url('../../static/images/partners/Vector7.svg');
@@ -23,6 +32,20 @@
         grid-gap: 30px;
         justify-content: center;
         padding-bottom: 80px;
+
+        @include break (tablet) {
+            grid-template-columns: 160px 160px 160px 160px;
+        }
+
+        @include break (small) {
+            grid-template-columns: 160px 160px;
+        }
+
+        @include break (phone) {
+            grid-template-columns: 135px 135px;
+            grid-gap: 10px;
+            padding-bottom: 40px;
+        }
     }
 
     &-info {
@@ -39,6 +62,21 @@
         line-height: 60px;
         text-align: right;
         color: $black;
+
+        @include break (tablet) {
+            font-size: 30px;
+            line-height: 1;
+            margin-bottom: 20px;
+        }
+        @include break (small) {
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
+
+        @include break (phone) {
+            font-size: 22px;
+            margin-bottom: 10px;
+        }
     }
 
     &-desk {
@@ -51,6 +89,18 @@
         text-align: right;
         color: $black;
         margin-bottom: 15px;
+
+        @include break (tablet) {
+            font-size: 24px;
+            line-height: 1;
+            margin-bottom: 10px;
+        }
+        @include break (small) {
+            font-size: 20px;
+        }
+        @include break (phone) {
+            font-size: 18px;
+        }
     }
 
     &-text {
@@ -61,6 +111,17 @@
         line-height: 48px;
         text-align: right;
         color: $grey;
+
+        @include break (tablet) {
+            font-size: 20px;
+            line-height: 1.4;
+        }
+        @include break (small) {
+            font-size: 16px;
+        }
+        @include break (phone) {
+            font-size: 14px;
+        }
     }
 
     &-figure {
@@ -73,6 +134,10 @@
         box-shadow: 0px 24px 64px rgba(0, 0, 0, 0.1);
         border-radius: 20px;
         z-index: 1;
+        @include break (phone) {
+            height: 135px;
+            padding: 10px;
+        }
     }
 
     &-img {
@@ -90,5 +155,16 @@
         text-transform: uppercase;
         color: $black;
         margin-bottom: 40px;
+
+        @include break (tablet) {
+            font-size: 40px;
+            line-height: 1;
+        }
+
+        @include break (phone) {
+            font-size: 30px;
+            line-height: 1.2;
+            margin-bottom: 25px;
+        }
     }
 }
