--- a/development/sass/components/_steps.scss
+++ b/development/sass/components/_steps.scss
@@ -12,6 +12,11 @@
         position: relative;
         background-color: #ffffff;
         border-radius: 40px;
+
+        @include break (tablet) {
+            padding: 30px 20px;
+            max-width: 768px;
+        }
     }
 
     &-title {
@@ -26,6 +31,15 @@
         display: block;
         width: 100%;
         margin-bottom: 58px;
+
+        @include break (tablet) {
+            margin-bottom: 40px;
+            font-size: 40px;
+        }
+
+        @include break (phone) {
+            font-size: 30px;
+        }
     }
 
     &-cards {
@@ -33,6 +47,19 @@
         grid-template-columns: 235px 235px 235px 235px;
         grid-gap: 48px;
         justify-content: center;
+
+        @include break (tablet) {
+            grid-template-columns: 1fr 1fr 1fr 1fr;
+            grid-gap: 20px;
+        }
+        @include break (small) {
+            grid-template-columns: 1fr 1fr;
+            grid-gap: 50px 20px;
+        }
+
+        @include break (phone) {
+            grid-template-columns: 1fr;
+        }
     }
 
     &-card {
@@ -40,13 +67,51 @@
         flex-direction: column;
         align-items: center;
 
+        @include break (small) {
+            &:nth-of-type(1) {
+                order: 3;
+            }
+            &:nth-of-type(2) {
+                order: 4;
+            }
+            &:nth-of-type(3) {
+                order: 1;
+            }
+            &:nth-of-type(4) {
+                order: 2;
+            }
+        }
+
+        @include break (phone) {
+            &:nth-of-type(1) {
+                order: 4;
+            }
+            &:nth-of-type(2) {
+                order: 3;
+            }
+            &:nth-of-type(3) {
+                order: 2;
+            }
+            &:nth-of-type(4) {
+                order: 1;
+            }
+        }
+
         &__figure {
             height: 140px;
+
+            @include break (tablet) {
+                height: 80px;
+            }
         }
 
         &__img {
             height: 140px;
             width: auto;
+
+            @include break (tablet) {
+                height: 80px;
+            }
         }
 
         &__number {
@@ -58,6 +123,13 @@
             color: $black;
             margin-top: 28px;
             margin-bottom: 10px;
+
+            @include break (tablet) {
+                font-size: 24px;
+                line-height: 32px;
+                margin-top: 14px;
+                margin-bottom: 5px;
+            }
         }
 
         &__text {
@@ -68,6 +140,11 @@
             line-height: 1.5;
             color: $grey;
             text-align: center;
+
+            @include break (tablet) {
+                font-size: 18px;
+                line-height: 1.2;
+            }
         }
     }
 }
