--- a/development/sass/_common.scss
+++ b/development/sass/_common.scss
@@ -23,6 +23,7 @@ html {
 body {
 	overflow-x: hidden;
 	min-height: 100vh;
+
 	&.popup-opened {
 		overflow: hidden;
 	}
@@ -66,9 +67,11 @@ strong {
 	@include break(desktop) {
 		width: 970px;
 	}
+
 	@include break(medium) {
 		width: calc(100% - 60px);
 	}
+
 	@include break(small) {
 		width: calc(100% - 40px);
 	}
@@ -83,4 +86,268 @@ strong {
 
 p:empty {
 	display: none;
+}
+
+.control {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-end;
+
+	&-text {
+		font-family: $rubik;
+		font-style: normal;
+		font-weight: normal;
+		font-size: 16px;
+		line-height: 19px;
+		display: flex;
+		align-items: center;
+		text-align: right;
+		letter-spacing: 0.08em;
+		text-transform: uppercase;
+		color: #6E798C;
+		margin-bottom: 5px;
+
+		&__require {
+			color: #EB5757;
+
+		}
+
+		&__after {
+			margin-bottom: 0;
+		}
+	}
+
+	&--center {
+		flex-direction: row;
+		align-items: center;
+	}
+
+	&-input {
+		width: 100%;
+		border: 1px solid #C9CAD1;
+		box-sizing: border-box;
+		border-radius: 8px;
+		padding: 16px 12px;
+		font-family: $rubik;
+		font-style: normal;
+		font-weight: 300;
+		font-size: 18px;
+		line-height: 21px;
+		color: $black;
+
+		&--small {
+			max-width: 100px;
+			width: 100%;
+			margin-right: 10px;
+			text-align: center;
+			appearance: none;
+			-moz-appearance: none;
+			-webkit-appearance: none;
+		}
+	}
+
+	&-textarea {
+		position: relative;
+
+		textarea {
+			border: 1px solid #C9CAD1;
+			box-sizing: border-box;
+			border-radius: 8px;
+			width: 100%;
+			height: 144px;
+			padding: 16px 12px;
+			padding-bottom: 30px;
+			font-family: $rubik;
+			font-style: normal;
+			font-weight: 300;
+			font-size: 18px;
+			line-height: 21px;
+			color: $black;
+		}
+
+		&__count {
+			position: absolute;
+			left: 25px;
+			bottom: 9px;
+			font-family: $rubik;
+			font-style: normal;
+			font-weight: normal;
+			font-size: 14px;
+			line-height: 17px;
+			text-align: right;
+			letter-spacing: 0.08em;
+			text-transform: uppercase;
+			color: #C9CAD1;
+		}
+	}
+
+	&-select {
+		display: flex;
+
+		@include break (tablet) {
+			width: 100%;
+		}
+
+		select {
+			border-radius: 8px 0 0 8px;
+			margin: 0;
+			border-right: 0;
+			background-color: transparent;
+			background-image: url('../../static/images/arrow.svg');
+			background-repeat: no-repeat;
+			padding-left: 40px;
+			background-position: left 15px center;
+		}
+
+		select+input {
+			border-radius: 0 8px 8px 0;
+		}
+	}
+}
+
+.checkboxs {
+	display: flex;
+	align-items: center;
+
+	@include break (small) {
+		flex-wrap: wrap;
+		grid-gap: 10px;
+		justify-content: flex-end;
+	}
+
+	label {
+		margin-right: 10px;
+		position: relative;
+
+		@include break (small) {
+			margin-right: 0;
+		}
+
+		input {
+			width: 0;
+			height: 0;
+			opacity: 0;
+			visibility: hidden;
+			margin: 0;
+			position: absolute;
+		}
+
+		input+span {
+			padding: 8px 18px;
+			background: linear-gradient(270deg, #16D1C6 0%, #0E5D89 92.5%);
+			border-radius: 20px;
+			font-family: $rubik;
+			font-style: normal;
+			font-weight: 300;
+			font-size: 18px;
+			line-height: 21px;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			color: $black;
+			z-index: 1;
+			position: relative;
+
+			&::after {
+				content: '';
+				position: absolute;
+				z-index: -1;
+				border-radius: 20px;
+				top: 1px;
+				left: 1px;
+				width: calc(100% - 2px);
+				height: calc(100% - 2px);
+				background-color: #FFFFFF;
+			}
+		}
+
+		input:checked+span {
+
+			padding: 8px 18px;
+			background: linear-gradient(270deg, #16D1C6 0%, #0E5D89 92.5%);
+			border-radius: 20px;
+			font-family: $rubik;
+			font-style: normal;
+			font-weight: 300;
+			font-size: 18px;
+			line-height: 21px;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			color: #FFFFFF;
+
+			&::after {
+				display: none;
+
+			}
+		}
+	}
+
+	&-transparent {
+		background-color: transparent;
+
+		label {
+			input+span {
+				padding: 9px 15px;
+				background: #FFFFFF;
+				border: 1px solid #C9CAD1;
+				box-sizing: border-box;
+				border-radius: 200px;
+				border-radius: 20px;
+				font-family: $rubik;
+				font-style: normal;
+				font-weight: 300;
+				font-size: 18px;
+				line-height: 21px;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				color: $black;
+				z-index: 1;
+				position: relative;
+
+				&::after {
+					display: none;
+				}
+			}
+
+			input:checked+span {
+				border: 2px solid #495057;
+				box-sizing: border-box;
+				border-radius: 200px;
+				background: #FFFFFF;
+				padding: 8px 14px;
+				font-family: $rubik;
+				font-style: normal;
+				font-weight: 300;
+				font-size: 18px;
+				line-height: 21px;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				color: #333333;
+
+				&::after {
+					display: none;
+
+				}
+			}
+		}
+	}
+}
+
+.notice {
+	p {
+		width: 100%;
+		display: block;
+		font-size: 12px;
+		text-align: center;
+		margin-top: 10px;
+	}
+	&-success {
+		color: green;
+	}
+	&-error {
+		color: red;
+	}
 }
