--- a/development/sass/_modal_window.scss
+++ b/development/sass/_modal_window.scss
@@ -81,6 +81,7 @@ html {
 			line-height: 1.3;
 			text-align: right;
 			color: #FFFFFF;
+
 			@include break (small) {
 				font-size: 28px;
 			}
@@ -94,6 +95,7 @@ html {
 			line-height: 1;
 			text-align: right;
 			color: #FFFFFF;
+
 			@include break (small) {
 				font-size: 18px;
 			}
@@ -105,6 +107,7 @@ html {
 			display: grid;
 			grid-template-columns: 1fr 1fr 1fr;
 			grid-gap: 25px;
+
 			@include break (tablet) {
 				grid-template-columns: 1fr;
 			}
@@ -114,8 +117,9 @@ html {
 			margin-top: 24px;
 			display: flex;
 			justify-content: space-between;
+
 			@include break (tablet) {
-				flex-direction: column;
+				flex-direction: column-reverse;
 				grid-gap: 20px;
 			}
 		}
@@ -149,6 +153,7 @@ html {
 			border-radius: 20px;
 			padding: 13px 20px;
 			min-width: 182px;
+			cursor: pointer;
 		}
 	}
 
@@ -165,6 +170,7 @@ html {
 			text-transform: uppercase;
 			color: #FFFFFF;
 			margin-bottom: 10px;
+
 			@include break (small) {
 				font-size: 24px;
 			}
@@ -173,6 +179,7 @@ html {
 		&__figures {
 			display: flex;
 			justify-content: space-around;
+			flex-direction: row-reverse;
 			position: relative;
 			padding: 25px 30px;
 			margin-bottom: 43px;
@@ -222,27 +229,33 @@ html {
 				&:nth-of-type(1) {
 					order: 3;
 				}
+
 				&:nth-of-type(2) {
 					order: 4;
 				}
+
 				&:nth-of-type(3) {
 					order: 1;
 				}
+
 				&:nth-of-type(4) {
 					order: 2;
 				}
 			}
-	
+
 			@include break (phone) {
 				&:nth-of-type(1) {
 					order: 4;
 				}
+
 				&:nth-of-type(2) {
 					order: 3;
 				}
+
 				&:nth-of-type(3) {
 					order: 2;
 				}
+
 				&:nth-of-type(4) {
 					order: 1;
 				}
@@ -293,6 +306,8 @@ html {
 			justify-content: center;
 			flex-direction: column;
 			align-items: center;
+			margin-bottom: 40px;
+			
 
 			.contact-btns__container {
 				justify-content: center;
@@ -307,6 +322,7 @@ html {
 			line-height: 1.8;
 			text-align: center;
 			color: $grey;
+			letter-spacing: -0.1px;
 
 			@include break (tablet) {
 				font-size: 20px;
@@ -336,8 +352,11 @@ html {
 		display: flex;
 		justify-content: center;
 		align-items: center;
-
-		@include break (tablet) {
+		padding-left: 88px;
+		@include break (laptop) {
+			padding-left: 20px;
+		}
+			@include break (tablet) {
 			font-size: 34px;
 			padding: 10px;
 		}
@@ -350,7 +369,12 @@ html {
 
 		svg {
 			position: relative;
-			right: -20px;
+			right: 1px;
+			margin-left: 25px;
+
+			@include break (laptop) {
+				right: -20px;
+			}
 
 			@include break (small) {
 				right: 0;
@@ -374,9 +398,16 @@ html {
 }
 
 .fancybox-close-small {
-	top: 10px;
-	right: 10px;
+
+	top: 25px;
+	right: 30px;
+
 	outline: none;
+
+	@include break (laptop) {
+		top: 10px;
+		right: 10px;
+	}
 
 	&:focus:after {
 		outline: none;
@@ -394,3 +425,12 @@ html {
 		background-color: transparent;
 	}
 }
+
+.fancybox-bg {
+	background: #ffffff;
+}
+
+.fancybox-is-open .fancybox-bg {
+	opacity: 0.7;
+}
+
