--- a/development/sass/components/_contacts.scss
+++ b/development/sass/components/_contacts.scss
@@ -26,6 +26,7 @@
     &-wrapper {
         display: flex;
         align-items: center;
+        justify-content: flex-end;
         min-height: 750px;
         max-width: 1110px;
         width: 100%;
@@ -43,7 +44,7 @@
     }
 
     &-btns {
-        margin-top: 70px;
+        margin-top: 90px;
 
         @include break (small) {
             margin-top: 0px;
@@ -55,6 +56,7 @@
             font-style: normal;
             font-weight: bold;
             font-size: 45px;
+            letter-spacing: 0px;
             line-height: 1.33;
             text-transform: uppercase;
             color: $black;
@@ -85,7 +87,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            margin-left: 55px;
+            margin-left: 0;
             padding: 22px 55px;
             min-width: 206px;
             background: linear-gradient(315deg, rgba(0, 0, 0, 0.6) 0%, rgba(255, 255, 255, 0) 100%), #FFFFFF;
@@ -102,6 +104,7 @@
             text-align: center;
             letter-spacing: 0.08em;
             color: $black;
+            cursor: pointer;
 
             * {
                 pointer-events: none;
@@ -117,6 +120,7 @@
                 padding: 10px 10px;
                 min-width: 140px;
                 font-size: 14px;
+                margin-left: 0;
             }
 
             &:hover {
@@ -137,7 +141,10 @@
             }
 
             &:first-child {
-                margin-left: 0;
+                margin-left: 53px;
+                @include break (small) {
+                    margin-left: 5px;
+                }
             }
         }
     }
@@ -151,7 +158,7 @@
 
     &-image {
         position: absolute;
-        top: 0;
+        top: -10px;
         left: 544px;
 
         @include break (tablet) {
@@ -177,6 +184,9 @@
     background-image: url('../../static/images/bg2.svg');
     background-repeat: no-repeat;
 
+    display: flex;
+    justify-content: flex-end;
+
     @include break (small) {
         background-size: cover;
     }
@@ -188,13 +198,15 @@
     }
 
     &-wrapper {
-        max-width: 1400px;
-        display: flex;
-        justify-content: space-between;
-        padding-left: 175px;
-        padding-right: 20px;
-        position: relative;
-        z-index: 2;
+        max-width: 1590px;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    flex-direction: row-reverse;
+    padding-left: 175px;
+    padding-right: 20px;
+    position: relative;
+    z-index: 2;
 
         @include break (small) {
             flex-wrap: wrap;
@@ -270,6 +282,12 @@
     }
 
     &-center {
+        margin-right: 90px;
+
+        @include break (laptop) {
+            margin-right: 0;
+        }
+
         @include break (small) {
             width: 50%;
         }
@@ -290,6 +308,7 @@
             width: 100%;
             justify-content: flex-end;
         }
+
         @include break (phone) {
             justify-content: space-around;
         }
