--- a/development/sass/components/_header.scss
+++ b/development/sass/components/_header.scss
@@ -1,6 +1,6 @@
 .header {
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     position: fixed;
     transform: translate(-50%, 0);
     left: 50%;
