--- a/development/sass/components/_hero.scss
+++ b/development/sass/components/_hero.scss
@@ -7,7 +7,6 @@
     background-position: top;
     display: flex;
     align-items: flex-end;
-    margin-bottom: 40px;
 
     @include break(laptop) {
         align-items: center;
@@ -44,9 +43,12 @@
     }
 
     &-title {
-        padding-bottom: 230px;
-        padding-right: 165px;
+        padding-bottom: 150px;
+        padding-right: 218px;
 
+        @include break (large1650) {
+            padding-right: 40px;
+        }
         @include break(laptop) {
             padding-bottom: 0;
             padding-right: 40px;
@@ -56,6 +58,7 @@
             display: block;
             width: 100%;
             padding-top: 50px;
+            order: 2;
         }
 
         @include break (phone) {
@@ -68,11 +71,16 @@
             font-style: normal;
             font-weight: 800;
             font-size: 72px;
-            line-height: 94px;
+            line-height: 85px;
+        
             text-align: center;
             color: #FFFFFF;
             text-shadow: 0px 4px 10px rgba(0, 0, 0, 0.7);
             text-align: right;
+
+            &--two {
+                margin-right: 10px;
+            }
 
             @include break(laptop) {
                 font-size: 50px;
@@ -117,6 +125,9 @@
     }
 
     &-block {
+        @include break (tablet) {
+            order: 1;
+        }
 
         &__top {
             top: 10px;
@@ -128,7 +139,6 @@
             &:hover {
                 background-image: url('../../static/images/block-top-hover.svg');
             }
-
             @include break (tablet) {
                 background: linear-gradient(270deg, #16D1C6 0%, #0E5D89 92.5%);
             }
@@ -136,8 +146,8 @@
 
 
         &__left {
-            bottom: 45%;
-            left: 40px;
+            bottom: 44%;
+            left: 62px;
             transform: translate(0, 50%);
             background-image: url('../../static/images/block-left.svg');
             width: 523px;
@@ -232,7 +242,7 @@
 
             strong {
                 display: block;
-                margin-bottom: 20px;
+                margin-bottom: 10px;
                 font-family: $rubik;
                 font-style: normal;
                 font-weight: bold;
@@ -266,7 +276,8 @@
                 font-style: normal;
                 font-weight: normal;
                 font-size: 32px;
-                line-height: 38px;
+                line-height: 36px;
+                margin-bottom: 20px;
                 display: flex;
                 align-items: center;
                 text-align: center;
