--- a/development/sass/components/_partners.scss
+++ b/development/sass/components/_partners.scss
@@ -21,7 +21,7 @@
         background-repeat: no-repeat;
         background-size: 100%;
         background-position: right;
-        right: -60px;
+        right: 0px;
         top: 60px;
         z-index: 1;
     }
@@ -49,7 +49,7 @@
     }
 
     &-info {
-        max-width: 1170px;
+        max-width: 1110px;
         width: 100%;
         margin: 0 auto;
     }
@@ -62,6 +62,7 @@
         line-height: 60px;
         text-align: right;
         color: $black;
+        letter-spacing: -.3px;
 
         @include break (tablet) {
             font-size: 30px;
