--- a/development/sass/components/_steps.scss
+++ b/development/sass/components/_steps.scss
@@ -30,7 +30,7 @@
         color: $black;
         display: block;
         width: 100%;
-        margin-bottom: 58px;
+        margin-bottom: 50px;
 
         @include break (tablet) {
             margin-bottom: 40px;
@@ -45,7 +45,7 @@
     &-cards {
         display: grid;
         grid-template-columns: 235px 235px 235px 235px;
-        grid-gap: 48px;
+        grid-gap: 30px;
         justify-content: center;
 
         @include break (tablet) {
@@ -67,35 +67,35 @@
         flex-direction: column;
         align-items: center;
 
-        @include break (small) {
-            &:nth-of-type(1) {
-                order: 3;
-            }
-            &:nth-of-type(2) {
-                order: 4;
-            }
-            &:nth-of-type(3) {
-                order: 1;
-            }
-            &:nth-of-type(4) {
-                order: 2;
-            }
-        }
+        // @include break (small) {
+        //     &:nth-of-type(1) {
+        //         order: 3;
+        //     }
+        //     &:nth-of-type(2) {
+        //         order: 4;
+        //     }
+        //     &:nth-of-type(3) {
+        //         order: 1;
+        //     }
+        //     &:nth-of-type(4) {
+        //         order: 2;
+        //     }
+        // }
 
-        @include break (phone) {
-            &:nth-of-type(1) {
-                order: 4;
-            }
-            &:nth-of-type(2) {
-                order: 3;
-            }
-            &:nth-of-type(3) {
-                order: 2;
-            }
-            &:nth-of-type(4) {
-                order: 1;
-            }
-        }
+        // @include break (phone) {
+        //     &:nth-of-type(1) {
+        //         order: 4;
+        //     }
+        //     &:nth-of-type(2) {
+        //         order: 3;
+        //     }
+        //     &:nth-of-type(3) {
+        //         order: 2;
+        //     }
+        //     &:nth-of-type(4) {
+        //         order: 1;
+        //     }
+        // }
 
         &__figure {
             height: 140px;
